naming convention updated except for Expenses fields and queries so as not to break the data