@@ -3,8 +3,8 @@ package nl.marisabel.frontend.charts;
 import lombok.extern.log4j.Log4j2;
 import nl.marisabel.backend.categories.entity.CategoryEntity;
 import nl.marisabel.backend.categories.repository.CategoryRepository;
-import nl.marisabel.backend.transactions.repository.ExpenseRepository;
-import nl.marisabel.backend.transactions.entity.ExpenseEntity;
+import nl.marisabel.backend.transactions.repository.TransactionRepository;
+import nl.marisabel.backend.transactions.entity.TransactionEntity;
 import org.jfree.data.category.DefaultCategoryDataset;
 import org.springframework.stereotype.Service;
 
@@ -14,18 +14,17 @@ import java.time.format.DateTimeFormatter;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
 import java.util.stream.Collectors;
 
 @Service
 @Log4j2
 public class ChartService {
 
- private final ExpenseRepository expenseRepository;
+ private final TransactionRepository transactionRepository;
  private final CategoryRepository categoryRepository;
 
- public ChartService(ExpenseRepository expenseRepository, CategoryRepository categoryRepository) {
-  this.expenseRepository = expenseRepository;
+ public ChartService(TransactionRepository transactionRepository, CategoryRepository categoryRepository) {
+  this.transactionRepository = transactionRepository;
   this.categoryRepository = categoryRepository;
  }
 
@@ -33,18 +32,18 @@ public class ChartService {
  // DATA SETS FOR ALL CHARTS
 
  public DefaultCategoryDataset generateExpenseIncomeDataset() {
-  List<ExpenseEntity> expenses = expenseRepository.findAll();
+  List<TransactionEntity> transactionEntities = transactionRepository.findAll();
 
   DefaultCategoryDataset dataset = new DefaultCategoryDataset();
 
   double totalIncome = 0;
   double totalExpenses = 0;
 
-  for (ExpenseEntity expense : expenses) {
-   if (expense.getCreditOrDebit().equalsIgnoreCase("CREDIT")) {
-    totalIncome += expense.getAmount();
-   } else if (expense.getCreditOrDebit().equalsIgnoreCase("DEBIT")) {
-    totalExpenses += expense.getAmount();
+  for (TransactionEntity transaction : transactionEntities) {
+   if (transaction.getCreditOrDebit().equalsIgnoreCase("CREDIT")) {
+    totalIncome += transaction.getAmount();
+   } else if (transaction.getCreditOrDebit().equalsIgnoreCase("DEBIT")) {
+    totalExpenses += transaction.getAmount();
    }
   }
 
@@ -55,25 +54,25 @@ public class ChartService {
  }
 
  public String[] getCreditOrDebitArray() {
-  List<String> creditOrDebitList = expenseRepository.findAll()
+  List<String> creditOrDebitList = transactionRepository.findAll()
           .stream()
-          .map(ExpenseEntity::getCreditOrDebit)
-          .collect(Collectors.toList());
+          .map(TransactionEntity::getCreditOrDebit)
+          .toList();
 
   return creditOrDebitList.toArray(new String[0]);
  }
 
  public int[] getAmountsArray() {
-  List<Integer> amountsList = expenseRepository.findAllAmounts();
+  List<Integer> amountsList = transactionRepository.findAllAmounts();
   return amountsList.stream().mapToInt(Integer::intValue).toArray();
  }
 
  public int getTotalCredits() {
-  return expenseRepository.calculateTotalCredits();
+  return transactionRepository.calculateTotalCredits();
  }
 
  public int getTotalDebits() {
-  return expenseRepository.calculateTotalDebits();
+  return transactionRepository.calculateTotalDebits();
  }
 
 
@@ -82,12 +81,12 @@ public class ChartService {
  // CHART MONTHLY BALANCES
 
  public Map<String, Double> getMonthlyTotals() {
-  List<ExpenseEntity> allExpenses = expenseRepository.findAll();
+  List<TransactionEntity> allTransactions = transactionRepository.findAll();
   Map<String, Double> monthlyTotals = new LinkedHashMap<>();
 
-  for (ExpenseEntity expense : allExpenses) {
-   String month = expense.getDate().getMonth().toString();
-   double amount = expense.getAmount();
+  for (TransactionEntity transaction : allTransactions) {
+   String month = transaction.getDate().getMonth().toString();
+   double amount = transaction.getAmount();
 
    monthlyTotals.merge(month, amount, Double::sum);
   }
@@ -99,14 +98,14 @@ public class ChartService {
   LocalDate startDate = YearMonth.of(year, 1).atDay(1);
   LocalDate endDate = YearMonth.of(year, 12).atEndOfMonth();
 
-  List<ExpenseEntity> allExpenses = expenseRepository.findByDateBetween(startDate, endDate);
+  List<TransactionEntity> allTransactions = transactionRepository.findByDateBetween(startDate, endDate);
   Map<String, Double> monthlyCredits = new LinkedHashMap<>();
   DateTimeFormatter formatter = DateTimeFormatter.ofPattern("MMyyyy");
 
-  for (ExpenseEntity expense : allExpenses) {
-   String monthYear = expense.getDate().format(formatter);
-   double amount = expense.getAmount();
-   String creditOrDebit = expense.getCreditOrDebit();
+  for (TransactionEntity transaction : allTransactions) {
+   String monthYear = transaction.getDate().format(formatter);
+   double amount = transaction.getAmount();
+   String creditOrDebit = transaction.getCreditOrDebit();
 
    if ("credit".equalsIgnoreCase(creditOrDebit)) {
     monthlyCredits.merge(monthYear, amount, Double::sum);
@@ -120,14 +119,14 @@ public class ChartService {
   LocalDate startDate = YearMonth.of(year, 1).atDay(1);
   LocalDate endDate = YearMonth.of(year, 12).atEndOfMonth();
 
-  List<ExpenseEntity> allExpenses = expenseRepository.findByDateBetween(startDate, endDate);
+  List<TransactionEntity> allTransactions = transactionRepository.findByDateBetween(startDate, endDate);
   Map<String, Double> monthlyDebits = new LinkedHashMap<>();
   DateTimeFormatter formatter = DateTimeFormatter.ofPattern("MMyyyy");
 
-  for (ExpenseEntity expense : allExpenses) {
-   String monthYear = expense.getDate().format(formatter);
-   double amount = expense.getAmount();
-   String creditOrDebit = expense.getCreditOrDebit();
+  for (TransactionEntity transaction : allTransactions) {
+   String monthYear = transaction.getDate().format(formatter);
+   double amount = transaction.getAmount();
+   String creditOrDebit = transaction.getCreditOrDebit();
 
    if ("debit".equalsIgnoreCase(creditOrDebit)) {
     monthlyDebits.merge(monthYear, amount, Double::sum);
@@ -150,10 +149,10 @@ public class ChartService {
 
   if (!categories.isEmpty()) {
    for (CategoryEntity category : categories) {
-    List<ExpenseEntity> expenses = expenseRepository.findAllByDateBetweenAndCategory(startDate, endDate, category);
-    double total = expenses.stream()
-            .filter(expense -> "credit".equalsIgnoreCase(expense.getCreditOrDebit()))
-            .mapToDouble(ExpenseEntity::getAmount)
+    List<TransactionEntity> transactions = transactionRepository.findAllByDateBetweenAndCategory(startDate, endDate, category);
+    double total = transactions.stream()
+            .filter(transaction -> "credit".equalsIgnoreCase(transaction.getCreditOrDebit()))
+            .mapToDouble(TransactionEntity::getAmount)
             .sum();
 
     monthlyCredits.put(category.getCategory(), total);
@@ -176,10 +175,10 @@ public class ChartService {
 
   if (!categories.isEmpty()) {
    for (CategoryEntity category : categories) {
-    List<ExpenseEntity> expenses = expenseRepository.findAllByDateBetweenAndCategory(startDate, endDate, category);
-    double total = expenses.stream()
-            .filter(expense -> "debit".equalsIgnoreCase(expense.getCreditOrDebit()))
-            .mapToDouble(ExpenseEntity::getAmount)
+    List<TransactionEntity> transactions = transactionRepository.findAllByDateBetweenAndCategory(startDate, endDate, category);
+    double total = transactions.stream()
+            .filter(transaction -> "debit".equalsIgnoreCase(transaction.getCreditOrDebit()))
+            .mapToDouble(TransactionEntity::getAmount)
             .sum();
 
     monthlyDebits.put(category.getCategory(), total);
@@ -197,10 +196,10 @@ public class ChartService {
 
   Map<String, Double> monthlyCredits = new LinkedHashMap<>();
 
-  List<ExpenseEntity> expenses = expenseRepository.findAllByDateBetweenAndCategory(startDate, endDate, categoryEntity);
-  double total = expenses.stream()
-          .filter(expense -> "credit".equalsIgnoreCase(expense.getCreditOrDebit()))
-          .mapToDouble(ExpenseEntity::getAmount)
+  List<TransactionEntity> transactions = transactionRepository.findAllByDateBetweenAndCategory(startDate, endDate, categoryEntity);
+  double total = transactions.stream()
+          .filter(transaction -> "credit".equalsIgnoreCase(transaction.getCreditOrDebit()))
+          .mapToDouble(TransactionEntity::getAmount)
           .sum();
 
   monthlyCredits.put(categoryEntity.getCategory(), total);
@@ -214,10 +213,10 @@ public class ChartService {
 
   Map<String, Double> monthlyDebits = new LinkedHashMap<>();
 
-  List<ExpenseEntity> expenses = expenseRepository.findAllByDateBetweenAndCategory(startDate, endDate, categoryEntity);
-  double total = expenses.stream()
-          .filter(expense -> "debit".equalsIgnoreCase(expense.getCreditOrDebit()))
-          .mapToDouble(ExpenseEntity::getAmount)
+  List<TransactionEntity> transactions = transactionRepository.findAllByDateBetweenAndCategory(startDate, endDate, categoryEntity);
+  double total = transactions.stream()
+          .filter(transaction -> "debit".equalsIgnoreCase(transaction.getCreditOrDebit()))
+          .mapToDouble(TransactionEntity::getAmount)
           .sum();
 
   monthlyDebits.put(categoryEntity.getCategory(), total);
